--- a/views/users/order-status.ejs
+++ b/views/users/order-status.ejs
@@ -14,9 +14,8 @@
                 <div class="breadcrumb__text">
                     <h4 class="text-dark">Order details</h4>
                     <div class="breadcrumb__links">
-                      <a class="text-dark" href="./index.html">Home</a>
-                        <a class="text-dark" href="./index.html">user Account</a>
-                        <span>Coupons</span>
+                      <a class="text-dark" href="/home">Home</a>
+                        <span>Order details</span>
                     </div>
                 </div>
             </div>
