add product button color changed

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -477,7 +477,7 @@
             
             
         <div class="d-grid mt-5   mx-auto">
-          <button class="btn btn-success" type="submit">Add Product</button>
+          <button class="btn btn-danger" type="submit">Add Product</button>
         </div>
             </div>
           </div>
